// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  <span
    class="sc-AxiKw cuuhUq"
  >
    <label
      class="sc-AxirZ hWkxLE"
      for="id4"
    >
      CheckBox Name
    </label>
    <input
      class="sc-AxjAm jIaAfJ"
      id="id4"
      type="checkbox"
      value=""
    />
  </span>
</DocumentFragment>
`;

exports[`Matches snapshot  1`] = `
<DocumentFragment>
  <span
    class="sc-AxiKw cuuhUq"
  >
    <label
      class="sc-AxirZ hWkxLE"
      for="id3"
    />
    <input
      class="sc-AxjAm jIaAfJ"
      id="id3"
      type="checkbox"
      value=""
    />
  </span>
</DocumentFragment>
`;
